Closed Bug 354853 Opened 19 years ago Closed 19 years ago

If pango lang has unknown language, we fail to convert to moz lang

Categories

(Core :: Graphics, defect)

x86
Linux
defect
Not set
minor

Tracking

()

RESOLVED FIXED

People

(Reporter: masayuki, Assigned: masayuki)

References

Details

Attachments

(1 file)

from bug 339513 comment 59. I have a mistake in the patch of bug 339513. I'll attach the patch.
Status: NEW → ASSIGNED
Summary: If pango lang has unknown language, we fails to convert to moz lang → If pango lang has unknown language, we fail to convert to moz lang
Attachment #240648 - Flags: review?(pavlov) → review+
checked-in.
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: