Bug 354853 If pango lang has unknown language, we fail to convert to moz lang r=pavlov