gfx/thebes/src/gfxPangoFonts.cpp
@@ -1760,10 +1760,10 @@ GetMozLanguage(const PangoLanguage *aLang, nsACString &aMozLang)
         return;
 
     nsCAutoString lang(pango_language_to_string(aLang));
-    if (lang.Equals("xx"))
+    if (lang.IsEmpty() || lang.Equals("xx"))
         return;
 
-    do {
+    while (1) {
         for (PRUint32 i = 0; i < NUM_PANGO_ALL_LANG_GROUPS; ++i) {
             if (lang.Equals(PangoAllLangGroup[i].PangoLang)) {
                 if (PangoAllLangGroup[i].mozLangGroup)
@@ -1777,6 +1777,7 @@ GetMozLanguage(const PangoLanguage *aLang, nsACString &aMozLang)
             lang.Cut(hyphen, lang.Length());
             continue;
         }
-    } while (0);
+        break;
+    }
 }
 
